# p4n4-lib

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
p4n4_lib/: __init__.py  compose.py  env.py  layers.py  layout.py  manifest.py  scaffold.py  secrets.py  sources.yaml  validate.py
tests/: test_lib.py
