[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p4n4-lib"
version = "0.1.0"
description = "Shared library between P4N4 stacks and clients"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAISGA", email = "jraleman@raisga.com" }]
keywords = ["iot", "edge-ai", "docker", "library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/raisga/p4n4-lib"
Documentation = "https://github.com/raisga/p4n4-docs"
Issues = "https://github.com/raisga/p4n4-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["p4n4_lib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
